ethereum/mainnet/yaml/Service.block-indexer-v3.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: block-indexer-v3
    monitor: prometheus
    version: v3
  name: block-indexer-v3
  namespace: eth-mainnet
spec:
  clusterIP: None
  ports:
    - name: prometheus
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    app: block-indexer-v3
    version: v3
  type: ClusterIP
