ethereum/mainnet/yaml/Service.firehose-v3.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
  labels:
    app: firehose-v3
    monitor: prometheus
    version: v3
  name: firehose-v3
  namespace: eth-mainnet
spec:
  clusterIP: None
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: prometheus
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    app: firehose-v3
    version: v3
  type: ClusterIP
