ethereum/mainnet/yaml/Service.firehose.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "firehose-backendconfig"}'
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: firehose
  name: firehose
  namespace: eth-mainnet
spec:
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: firehose-v3
    version: v3
  type: NodePort
