ethereum/mainnet/yaml/Service.merger-v3.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: merger-v3
    monitor: prometheus
    version: v3
  name: merger-v3
  namespace: eth-mainnet
spec:
  clusterIP: None
  ports:
    - name: grpc-endpoint
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: prometheus
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    app: merger-v3
    version: v3
  type: ClusterIP
