ethereum/mainnet/yaml/Service.peering-v3.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peering-v3
    monitor: prometheus
    monitor2: prometheus2
  name: peering-v3
  namespace: eth-mainnet
spec:
  clusterIP: None
  ports:
    - name: p2p-endpoint
      port: 30303
      protocol: TCP
      targetPort: 30303
    - name: prometheus
      port: 9102
      protocol: TCP
      targetPort: 9102
    - name: prometheus2
      port: 6061
      protocol: TCP
      targetPort: 6061
    - name: rpc-endpoint
      port: 8545
      protocol: TCP
      targetPort: 8545
  publishNotReadyAddresses: true
  selector:
    app: peering-v3
    version: v3
  type: ClusterIP
