ethereum/mainnet/yaml/Service.relayer-v3.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: relayer-v3
    monitor: prometheus
    version: v3
  name: relayer-v3
  namespace: eth-mainnet
spec:
  ports:
    - name: prometheus
      port: 9102
      protocol: TCP
      targetPort: 9102
    - name: publisher
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: relayer-v3
    version: v3
  type: ClusterIP
