ethereum/mainnet/yaml/Ingress.default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: default-ingress
  namespace: eth-mainnet
spec:
  rules:
    - host: <public_hostname>
      http:
        paths:
          - backend:
              service:
                name: firehose
                port:
                  number: 9000
            path: /sf.firehose.v1.Stream/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: firehose
                port:
                  number: 9000
            pathType: ImplementationSpecific
